<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/action_settings">
    <PreferenceCategory android:title="@string/datos_personales">

        <EditTextPreference
            android:key="nombre"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nombre"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/entorno">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/color_prioridad_alta"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color_prioridad"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/avisar_nuevas_tareas" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Acerca de...">
        <Preference
            app:key="buildVersion"
            app:summary="Practica5 1.0.0"
            app:title="Versión de compilación" />
        <Preference
            app:key="telefonoContacto"
            app:summary=" 966 91 22 60"
            app:title="Teléfono de contacto" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
</PreferenceScreen>