<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_agenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/swSinPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Sin Pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgFiltrarEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swSinPagar">

            <RadioButton
                android:id="@+id/rgbAbiertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abierta" />

            <RadioButton
                android:id="@+id/rgbCerradas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrada" />

            <RadioButton
                android:id="@+id/rgbEnCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_curso" />

            <RadioButton
                android:id="@+id/rgbTodas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todas" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTareas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgFiltrarEstado"
        tools:listitem="@layout/item_tarea" />

</androidx.constraintlayout.widget.ConstraintLayout>
