<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clytTarea"
    tools:context=".ui.TareaFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="256dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCategoria"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="260dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvPrioridad"
        app:layout_constraintTop_toBottomOf="@+id/spCategoria" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="Categoria"
        app:layout_constraintEnd_toStartOf="@+id/spCategoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrioridad"
        android:layout_width="67dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Prioridad"
        app:layout_constraintEnd_toStartOf="@+id/spPrioridad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

    <ImageView
        android:id="@+id/ivPagado"
        android:layout_width="66dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_pagado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrioridad" />

    <Switch
        android:id="@+id/swPagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="Pagado"
        app:layout_constraintStart_toEndOf="@+id/ivPagado"
        app:layout_constraintTop_toBottomOf="@+id/spPrioridad"
        tools:text="@string/pagado" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPagado" />

    <RadioGroup
        android:id="@+id/rgEstado"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado">

        <RadioButton
            android:id="@+id/rbAbierta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abierta" />

        <RadioButton
            android:id="@+id/rbEnCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_curso" />

        <RadioButton
            android:id="@+id/rbCerrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrada" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ivEstado"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_abierto"
        app:layout_constraintBottom_toTopOf="@+id/rgEstado"
        app:layout_constraintStart_toEndOf="@+id/tvEstado" />
</androidx.constraintlayout.widget.ConstraintLayout>
